--- a/app/views/movies/index.html.haml
+++ b/app/views/movies/index.html.haml
@@ -1,12 +1,20 @@
 -#  This file is app/views/movies/index.html.haml
 %h1 All Movies
 
+= form_tag movies_path, id: 'ratings_form', :method => :get do
+  Include:
+  - @all_ratings .each do |rating|
+    = rating
+    = check_box_tag "ratings[#{rating}]", 1, (@ratings.include?(rating) ? true : false)
+  = submit_tag 'Refresh', id: 'ratings_submit'
+
 %table#movies
   %thead
     %tr
-      %th{class: @title_class}= link_to 'Movie Title', movies_path(sort_by: 'title'), id: 'title_header'
+      %th{class: @title_class}= link_to 'Movie Title', movies_path(sort_by: 'title', ratings: @ratings), id: 'title_header'
+
       %th Rating
-      %th{class: @release_date_class}= link_to 'Release Date', movies_path(sort_by: 'release_date'), id: 'release_date_header'
+      %th{class: @release_date_class}= link_to 'Release Date', movies_path(sort_by: 'release_date', ratings: @ratings), id: 'release_date_header'
       %th More Info
   %tbody
     - @movies.each do |movie|
